<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/act_acc_editor_coor_wrapper">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_toolbar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_acc_editor_host_label"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_acc_editor_edit_host"
            android:hint="@string/act_acc_editor_host_hint"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_acc_editor_port_label"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_acc_editor_edit_port"
            android:inputType="number"
            android:hint="@string/act_acc_editor_port_hint"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_acc_editor_username_label"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_acc_editor_edit_username"
            android:hint="@string/act_acc_editor_username_hint"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_acc_editor_password_label"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_acc_editor_edit_password"
            android:hint="@string/act_acc_editor_host_hint"
            android:inputType="textPassword"/>
        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
