<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="2"
    >
    <ImageView
        android:id="@+id/item_file_iv_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_folder"
        android:contentDescription="@string/empty"
        android:layout_weight="0.5"
        android:padding="5dp"
        />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:padding="5dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/item_file_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_file_title"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:ems="14"
            android:maxLines="1"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/item_file_tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_file_tv_title"
            android:text="@string/item_file_size"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/item_file_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_file_tv_size"
            android:text="@string/item_file_date"
            android:textSize="13sp"/>
    </RelativeLayout>
</LinearLayout>
