<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/White">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_dialog_tvMessage"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/custom_dialog_btnEdit"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_bg"
            android:maxLines="1"
            android:text="@string/custom_dialog_edit"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/custom_dialog_btnDelete"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_bg"
            android:maxLines="1"
            android:text="@string/custom_dialog_delete"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/custom_dialog_btnCancel"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_bg"
            android:maxLines="1"
            android:text="@string/custom_dialog_cancel"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:typeface="serif" />
    </LinearLayout>

    <TextView
        android:id="@+id/custom_dialog_tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="6dp"
        android:text="@string/custom_dialog_question"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:typeface="serif" />

</RelativeLayout>